♻️ refactor: Collection을 통한 리스트 변환을 toList로 변환